--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     </head>
     <body>
         <script>
-        
+            //create an array for the computer to pick the choices from
+        function computerPlay(){
+            let choices = [ "rock", "paper", "scissors"]
+            //Math.random will pick any item in the choices array when multiplied by the length of the array
+            return choices[Math.floor(Math.random()*choices.length)]
+        }
+        console.log(computerPlay())
         </script>
 
     </body>
