added play round function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
             //Math.random will pick any item in the choices array when multiplied by the length of the array
             return choices[Math.floor(Math.random()*choices.length)]
         }
-        console.log(computerPlay())
+        function playRound(playSelection, computerSelection){
+
+        }
+
+        const playerSelection = "rock"
+        const computerSelection = computerPlay()
         </script>
 
     </body>
